--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   zoomType: 'x'
               },
               title: {
-                  text: 'PM2.5 Over Time'
+                  text: 'Shanghai 2015 PM2.5 Levels'
               },
               subtitle: {
                   text: document.ontouchstart === undefined ?
