--- a/index.html
+++ b/index.html
@@ -2,68 +2,98 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<form>
+  <div class="form-group">
+    <label for="citySelect">Select a city</label>
+    <select class="form-control" id="citySelect">
+      <option selected="selected">Shanghai</option>
+      <option>Kathmandu</option>
+    </select>
+  </div>
+</form>
 
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 <script type="text/javascript">
-  $.getJSON(
-      './data/commit/Shanghai/highcharts-series-raw.json',
-      function (data) {
+  const getJSON = $.getJSON;
 
-          Highcharts.chart('container', {
-              chart: {
-                  zoomType: 'x'
-              },
-              title: {
-                  text: 'Shanghai 2015 PM2.5 Levels'
-              },
-              subtitle: {
-                  text: document.ontouchstart === undefined ?
-                          'Click and drag in the plot area to zoom in' : 'Pinch the chart to zoom in'
-              },
-              xAxis: {
-                  type: 'datetime'
-              },
-              yAxis: {
-                  title: {
-                      text: 'pm2.5'
-                  }
-              },
-              legend: {
-                  enabled: false
-              },
-              plotOptions: {
-                  area: {
-                      fillColor: {
-                          linearGradient: {
-                              x1: 0,
-                              y1: 0,
-                              x2: 0,
-                              y2: 1
-                          },
-                          stops: [
-                              [0, Highcharts.getOptions().colors[0]],
-                              [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
-                          ]
-                      },
-                      marker: {
-                          radius: 2
-                      },
-                      lineWidth: 1,
-                      states: {
-                          hover: {
-                              lineWidth: 1
-                          }
-                      },
-                      threshold: null
-                  }
-              },
+  const plotData = function(city) {
+    getJSON(
+        `./data/commit/${city}/highcharts-series-raw.json`,
+        function (data) {
 
-              series: [{
-                  name: 'pm2.5',
-                  data: data
-              }]
-          });
-      }
-  );  
+            Highcharts.chart('container', {
+                chart: {
+                    zoomType: 'x'
+                },
+                title: {
+                    text: `${city} PM2.5 Levels`
+                },
+                subtitle: {
+                    text: document.ontouchstart === undefined ?
+                            'Click and drag in the plot area to zoom in' : 'Pinch the chart to zoom in'
+                },
+                xAxis: {
+                    type: 'datetime',
+                },
+                yAxis: {
+                    title: {
+                        text: 'pm2.5'
+                    }
+                },
+                legend: {
+                    enabled: false
+                },
+                plotOptions: {
+                    area: {
+                        fillColor: {
+                            linearGradient: {
+                                x1: 0,
+                                y1: 0,
+                                x2: 0,
+                                y2: 1
+                            },
+                            stops: [
+                                [0, Highcharts.getOptions().colors[0]],
+                                [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
+                            ]
+                        },
+                        marker: {
+                            radius: 2
+                        },
+                        lineWidth: 1,
+                        states: {
+                            hover: {
+                                lineWidth: 1
+                            }
+                        },
+                        threshold: null
+                    }
+                },
+
+                series: [{
+                    name: 'pm2.5',
+                    data: data
+                }]
+            });
+        }
+    );
+  }
+
+  $('#citySelect').change(() => {
+    const citySelected = $("#citySelect option:selected").text(); 
+    plotData(citySelected);
+  });
+
+  plotData('Shanghai');
+</script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+  
 </script>
