Update copy function

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 },
                 yAxis: {
                     title: {
-                        text: 'pm2.5'
+                        text: parameter
                     }
                 },
                 legend: {
@@ -130,7 +130,7 @@
                 },
 
                 series: [{
-                    name: 'pm2.5',
+                    name: parameter,
                     data: data
                 }]
             });
