--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      <h1>OpenAQ Time Series</h1>
+    <div class="col-12 py-4">
+      <h1 style="font-size: 3em; font-weight: 600">OpenAQ Time Series</h1>
     </div>
   </div>
-  <div class="row"></div>
   <div class="row">
     <div class="col-8">
       <div id="ts-chart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
