--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
@@ -43,117 +44,105 @@
 <script type="text/javascript">
   const getJSON = $.getJSON;
   let cities;
+  let citySelected = 'Delhi';
+  let locationSelected = 'Anand Vihar';
+  let parameterSelected = 'pm25';
 
-  const updateDropdown = function(dropdownId, values) {
+  const updateDropdown = (dropdownId, values) => {
     const select = document.getElementById(dropdownId);
     select.options.length = 0;
 
     /* Insert the new ones from the array above */
-    $.each(values, (_, value) => {
+    values.forEach(value => {
       select.options[select.options.length] = new Option(value, value);
-    });
+    })
   }
-  // populate cities dropdown from API
-  getJSON('https://api.openaq.org/v1/cities?order_by=count&sort=desc&limit=200', (data) => {
-    cities = data.results.map((city) => city['city']);
-    updateDropdown('citySelect', cities);
-    $("#citySelect").val(citySelected); 
-  });
 
-  const plotData = function() {
+  const plotData = () => {
     const city = citySelected;
     const location = locationSelected;
     const parameter = parameterSelected;
     $("#citySelect").val(citySelected);
     $("#locationSelect").val(locationSelected);
     $("#parameterSelect").val(parameterSelected);
-    let dataLocation;
-    if (city === 'Shanghai') {
-      dataLocation = `./data/commit/${city}/highcharts-series-raw.json`;
-    } else {
-      dataLocation = `https://s3.amazonaws.com/aimeeb-datasets-public/openaq/timeseries/${city}/${location.split(' ').join('+')}/${parameter}/all-highcharts.json`;
-    }
-
-    getJSON(
-        dataLocation,
-        function (data) {
-
-            Highcharts.chart('ts-chart', {
-                chart: {
-                  type: 'scatter',
-                    zoomType: 'x'
-                },
-                title: {
-                    text: `${city} ${parameter} Levels`
-                },
-                subtitle: {
-                    text: document.ontouchstart === undefined ?
-                            'Click and drag in the plot area to zoom in' : 'Pinch the chart to zoom in'
-                },
-                xAxis: {
-                    type: 'datetime',
-                },
-                yAxis: {
-                    title: {
-                        text: parameter
+    
+    let dataLocation = `https://s3.amazonaws.com/aimeeb-datasets-public/openaq/timeseries/${city}/${location.split(' ').join('+')}/${parameter}/all-highcharts.json`;
+    axios.get(dataLocation)
+      .then(({ data }) => {
+        Highcharts.chart('ts-chart', {
+          chart: {
+            type: 'scatter',
+              zoomType: 'x'
+          },
+          title: {
+              text: `${city} ${parameter} Levels`
+          },
+          subtitle: {
+              text: document.ontouchstart === undefined ? 'Click and drag in the plot area to zoom in' : 'Pinch the chart to zoom in',
+          },
+          xAxis: {
+              type: 'datetime',
+          },
+          yAxis: {
+              title: {
+                  text: parameter
+              }
+          },
+          legend: {
+              enabled: false
+          },
+          plotOptions: {
+            scatter: {
+                marker: {
+                    radius: 2,
+                    states: {
+                        hover: {
+                            enabled: true,
+                            lineColor: 'rgb(100,100,100)'
+                        }
                     }
                 },
-                legend: {
-                    enabled: false
+                states: {
+                    hover: {
+                        marker: {
+                            enabled: false
+                        }
+                    }
                 },
-                plotOptions: {
-                  scatter: {
-                      marker: {
-                          radius: 2,
-                          states: {
-                              hover: {
-                                  enabled: true,
-                                  lineColor: 'rgb(100,100,100)'
-                              }
-                          }
-                      },
-                      states: {
-                          hover: {
-                              marker: {
-                                  enabled: false
-                              }
-                          }
-                      },
-                      tooltip: {
-                          pointFormatter: function() {
-                            const dateObject = new Date(this.x).toLocaleString();
-                            return '<b>' + dateObject + '</b>: ' + this.y;
-                          }
-                      }
-                  }
-                },
-
-                series: [{
-                    name: parameter,
-                    data: data
-                }]
-            });
-        }
-    );
+                tooltip: {
+                    pointFormatter: function() {
+                      const dateObject = new Date(this.x).toLocaleString();
+                      return '<b>' + dateObject + '</b>: ' + this.y;
+                    }
+                }
+            }
+          },
+          series: [{
+              name: parameter,
+              data: data
+          }]
+        });
+      })
   }
 
-  const updateParameters = function(locationSelected) {
-    getJSON('https://api.openaq.org/v1/locations', {'location': locationSelected}, (data) => {
-      const parameters = data.results[0].parameters;
-      parameterSelected = parameters[0];
-      updateDropdown('parameterSelect', parameters);
-      plotData();
-    });    
+  const updateParameters = location => {
+    axios.get(`https://api.openaq.org/v1/locations?location[]=${ location }`)
+      .then(res => {
+        const parameters = res.data.results[0].parameters;
+        parameterSelected = parameters[0];
+        updateDropdown('parameterSelect', parameters);
+        plotData();     
+      })  
   }
 
-  const updateLocations = function(city) {
-    // list locations
-    getJSON('https://api.openaq.org/v1/locations', {'city': city}, (data) => {
-      const locations = data.results.map(location => location['location']);
-      locationSelected = locations[0];
-      updateDropdown('locationSelect', locations);
-      updateParameters(locationSelected);
-    });
+  const updateLocations = city => {
+    axios.get(`https://api.openaq.org/v1/locations?city[]=${ city }`)
+      .then(res => {
+        const locations = res.data.results.map(location => location['location']);
+        locationSelected = locations[0];
+        updateDropdown('locationSelect', locations);
+        updateParameters(locationSelected);
+      })
   }
   
   $('#citySelect').change(() => {
@@ -171,9 +160,13 @@
     plotData();
   });
 
-  let citySelected = 'Delhi';
-  let locationSelected = 'Anand Vihar';
-  let parameterSelected = 'pm25';
+  axios.get('https://api.openaq.org/v1/cities?order_by=count&sort=desc&limit=200')
+    .then(res => {
+      cities = res.data.results.map(city => city['city']);
+      updateDropdown('citySelect', cities);
+      $("#citySelect").val(citySelected); 
+    })
+
   updateLocations(citySelected);  
 </script>
 
